Fix extra margin bug, closes #11

--- a/source/stylesheets/_projects.scss
+++ b/source/stylesheets/_projects.scss
@@ -12,38 +12,29 @@
     justify-content: space-between;
 
     &--item {
-      width: 31.5%;
+      width: calc(33.3% - 20px);
       margin-bottom: 30px;
       display: inline-block;
       overflow: hidden;
       position: relative;
+      box-sizing: border-box;
       box-shadow: 0px 10px 30px $shadow;
 
-      &__link {
-        width: 100%;
-        height: 100%;
-        cursor: pointer;
-      }
-
       &__overlay {
-        background: rgba(0, 0, 0, 0.8);
+        background-color: transparent;
         position: absolute;
-        opacity: 0;
         top: 0;
         left: 0;
         width: 100%;
         height: 100%;
-        transition: all 0.3s ease-in-out;
-        padding: 20px;
-        display: flex;
-        flex-direction: column;
-        justify-content: space-around;
+        cursor: pointer;
         box-sizing: border-box;
+        transition: background-color 0.3s ease-in-out;
       }
 
       &--img {
         width: 100%;
-        height: 100%;
+        height: auto;
         transition: all 0.3s ease-in-out;
       }
 
@@ -69,21 +60,21 @@
         transition-delay: 0.2s;
       }
 
-      &:hover &__overlay {
-        opacity: 1;
+      &__overlay:hover &__overlay {
+          background-color: black;
       }
 
-      &:hover &--img {
+      &__overlay:hover &--img {
         transform: scale(1.1);
         transform-origin: center;
       }
 
-      &:hover &--title {
+      &__overlay:hover &--title {
         opacity: 1;
         transform: translateY(20px);
       }
 
-      &:hover &--see {
+      &__over:hover &--see {
         opacity: 1;
         transform: translateY(-20px);
       }
@@ -118,6 +109,7 @@
       &--item {
         margin-bottom: 25px;
         width: 47.5%;
+        padding-bottom: 47.5%;
       }
     }
   }
@@ -127,6 +119,7 @@
       &--item {
         margin-bottom: 40px;
         width: 100%;
+        padding-bottom: 100%;
       }
     }
   }
